2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3303325.c:
	  Merge from trunk: Fixed bug #3303325.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Code cleanup wrt. temporary labels.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* configure.in:
	  Give an error when boost is not detected.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-16 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/gen.c:
	  Fixed crash when running on cygwin.

2011-05-15 Philipp Klaus Krause <pkk@spth.de>

	* Merge from trunk.

2011-05-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.vcxproj,
	* sdas/linksrc/aslink.vcxproj.filters: added lkbank.c
	* src/z80/ralloc.c: moved z80_init_asmops prototype

2011-05-13 Philipp Klaus Krause <pkk@spth.de>

	* Merge from trunk.

2011-05-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  configure.in:
	  Make STX library optional and detect it in configure script.

2011-05-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Minor code cleanup and cost function accuracy improvement.

2011-05-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Fixed some bit-manipulation peepholes for immediate operands.
	* src/z80/gen.c:
	  Fixed operand loading in complement.

2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.c:
	  Reintegrated old register allocator (option --oldralloc).

2011-05-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
